Fixed styling issue on safari

--- a/public/homepage/css/style.css
+++ b/public/homepage/css/style.css
@@ -146,7 +146,6 @@ html, body {
   font-size: 50px;
 }
 .thetitle {
-  display: grid;
   text-align: center;
 }
   ::-webkit-scrollbar {
